# lumen

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  clippy-log.txt  test-log.txt
.github/workflows/: ci.yml  package-linux.yml  package-macos.yml  release.yml
crates/lumen-app/: Cargo.toml  build.rs
crates/lumen-app/assets/: integration.ps1
crates/lumen-app/src/: background.rs  clipboard_files.rs  cloud.rs  composer.rs  history.rs  input.rs  keymap.rs  main.rs  p2p.rs  proc_icon.rs  profile.rs  remote.rs  remote_mirror.rs  remote_ws.rs  session.rs  sessions_store.rs  settings.rs  single_instance.rs  snap_layouts.rs  update.rs
crates/lumen-editor/: Cargo.toml
crates/lumen-protocol/: Cargo.toml
crates/lumen-protocol/src/: lib.rs  remote.rs
crates/lumen-pty/: Cargo.toml
crates/lumen-pty/src/: lib.rs
crates/lumen-renderer/: Cargo.toml
crates/lumen-renderer/src/: composer_view.rs  lib.rs  theme.rs  themes.rs
crates/lumen-term/: Cargo.toml
crates/lumen-term/src/: grid.rs  term.rs
crates/lumen-term/tests/: bracketed_paste_passthrough.rs
docs/: F11-内置浏览器与AI控制-设计蓝图-2026-07-16.md  M3应用外壳设计.md  M3输入编辑器设计.md  M5.3-part3c-2-目录树OptionB与双向文件传输-终稿蓝图.md  M5.3-part3c-2-验收与接续.md  M5.3-part3d-完成与后续路线图-接续-2026-06-23.md  M5.3-part3d-远程多会话多窗格镜像-设计-2026-06-22.md  M5接续-2026-06-18.md  M5远程控制设计.md  M6-P2P直连-QUIC打洞-设计-2026-06-23.md  输入编辑器设计.md  需求池.md
docs/调研/: M3-egui集成调研.md  M3-多会话与egui改造面评估.md
server/deploy/: Caddyfile.example  README.md  lumen-server.env.example  lumen-server.service
server/lumen-server/: Cargo.toml  README.md
server/lumen-server/src/: config.rs  db.rs  handlers.rs  main.rs  (+1 more)
(+18 files in other folders)
