[workspace]
resolver = "2"
members = [
    "crates/lumen-pty",
    "crates/lumen-term",
    "crates/lumen-renderer",
    "crates/lumen-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jimhyliu/lumen"

[workspace.dependencies]
lumen-pty = { path = "crates/lumen-pty" }
lumen-term = { path = "crates/lumen-term" }
lumen-renderer = { path = "crates/lumen-renderer" }

anyhow = "1"
arboard = "3"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
portable-pty = "0.9"
vte = "0.15"
unicode-width = "0.2"
winit = "0.30"
wgpu = "29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glyphon = "0.11"
pollster = "0.4"
# egui 三件套版本必须一致（0.34 → wgpu 29 / winit 0.30，与现有渲染栈同源）。
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
# 文件树控件（单一维护者风险：用法收敛在 shell/filetree.rs 单模块内，便于替换）。
egui_ltreeview = "0.7"
# 删除走回收站（文件树右键删除，需求池 P3）：Windows 端封装 IFileOperation
# COM 全套，自实现成本高且易错；trash 是该领域的事实标准库。
trash = "5"
# 单实例检测（F8）：CreateMutexW / 命名事件等 Win32 同步原语。已是
# winit/wgpu 等的传递依赖（lock 中已有 0.61），零新增外部 crate。
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

# 不开 LTO：本机 rustc 1.94/1.96 两个版本开 thin LTO（linker-plugin-lto）
# 编译均随机崩溃（HEAP_CORRUPTION/ACCESS_VIOLATION），关闭后稳定通过。
[profile.release]
codegen-units = 1

# 第三方依赖不带调试信息：规避 rustc 编译 naga 时的栈溢出，并加快编译。
[profile.dev.package."*"]
debug = false
